--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -140,7 +140,7 @@
           </div>
           <div
             class="elem"
-            data-image="https://images.unsplash.com/photo-1700975928909-da4a46227a47?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0fHx8ZW58MHx8fHx8"
+            data-image="https://plus.unsplash.com/premium_photo-1683977922495-3ab3ce7ba4e6?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8c29jaWFsJTIwbWVkaWElMjBtYXJrZXRpbmd8ZW58MHx8MHx8fDA%3D"
           >
             <div class="overlay"></div>
             <h2>Graphic Designing</h2>
