--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -28,7 +28,7 @@
         <span class="close-button">&times;</span>
         <h2>Newsletter</h2>
         <form id="form">
-          <input type="text" id="name" placeholder="Enter your name" required />
+          <input type="text" id="name" placeholder="nter your name" required />
           <input
             type="email"
             id="email"
