--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -175,7 +175,7 @@
           </div>
           <div
             class="elem"
-            data-image="https://images.unsplash.com/photo-1700769025506-6c3dcb9ec9b7?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw2OXx8fGVufDB8fHx8fA%3D%3D"
+            data-image="https://images.unsplash.com/photo-1627244714766-94dab62ed964?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHZpZGVvJTIwZWRpdGluZyUyMHBob25lfGVufDB8fDB8fHww"
           >
             <div class="overlay"></div>
             <h2>Web Designing</h2>
