--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -140,7 +140,7 @@
           </div>
           <div
             class="elem"
-            data-image="https://plus.unsplash.com/premium_photo-1683977922495-3ab3ce7ba4e6?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8c29jaWFsJTIwbWVkaWElMjBtYXJrZXRpbmd8ZW58MHx8MHx8fDA%3D"
+            data-image="https://images.unsplash.com/photo-1627244714766-94dab62ed964?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHZpZGVvJTIwZWRpdGluZyUyMHBob25lfGVufDB8fDB8fHww"
           >
             <div class="overlay"></div>
             <h2>Graphic Designing</h2>
