--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -177,9 +177,13 @@
             class="elem"
             data-image="https://images.unsplash.com/photo-1627244714766-94dab62ed964?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHZpZGVvJTIwZWRpdGluZyUyMHBob25lfGVufDB8fDB8fHww"
           >
-            <div class="overlay"></div>
+             <div class="overlay"></div>
             <h2>Web Designing</h2>
           </div>
+          <div
+            class="elem"
+            data-image="https://images.unsplash.com/photo-1627244714766-94dab62ed964?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHZpZGVvJTIwZWRpdGluZyUyMHBob25lfGVufDB8fDB8fHww"
+          >
         </div>
       </div>
       <div id="page4">
