--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -18,9 +18,9 @@
 
   <body>
     <div id="loader">
-      <h1>NEXUS MARKETING</h1>
+      <h1>NEXUS</h1>
       <h1>COMPLETE</h1>
-      <h1>STARTUP SOLUTIONS</h1>
+      <h1>MARKETING SOLUTIONS</h1>
     </div>
 
     <div id="modal" class="modal">
