--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -154,7 +154,7 @@
           </div>
           <div
             class="elem"
-            data-image="https://images.unsplash.com/photo-1701014159309-4a8b84faadfe?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxOXx8fGVufDB8fHx8fA%3D%3D"
+            data-image="https://plus.unsplash.com/premium_photo-1679929943890-f9e73ba5d190?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzN8fGVtYWlsJTIwbWFya2V0aW5nfGVufDB8fDB8fHww"
           >
             <div class="overlay"></div>
             <h2>Data Analysis</h2>
