--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -147,21 +147,21 @@
           </div>
           <div
             class="elem"
-            data-image="https://images.unsplash.com/photo-1701077137611-9be394bf62f0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8fA%3D%3D"
+            data-image="https://plus.unsplash.com/premium_photo-1679929943890-f9e73ba5d190?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzN8fGVtYWlsJTIwbWFya2V0aW5nfGVufDB8fDB8fHww"
           >
             <div class="overlay"></div>
             <h2>Email Marketing</h2>
           </div>
           <div
             class="elem"
-            data-image="https://plus.unsplash.com/premium_photo-1679929943890-f9e73ba5d190?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzN8fGVtYWlsJTIwbWFya2V0aW5nfGVufDB8fDB8fHww"
+            data-image="https://plus.unsplash.com/premium_photo-1661434270550-fc467725a2ed?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8REFUQSUyMEFOQUxZU0lTfGVufDB8fDB8fHww"
           >
             <div class="overlay"></div>
             <h2>Data Analysis</h2>
           </div>
           <div
             class="elem"
-            data-image="https://images.unsplash.com/photo-1700924546093-f914fd5b8814?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyOHx8fGVufDB8fHx8fA%3D%3D"
+            data-image="https://images.unsplash.com/photo-1542626991-cbc4e32524cc?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Q09NUExFVEUlMjBNQU5BR0VNRU5UfGVufDB8fDB8fHww"
           >
             <div class="overlay"></div>
             <h2>Complete Management</h2>
