--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -168,14 +168,14 @@
           </div>
           <div
             class="elem"
-            data-image="https://images.unsplash.com/photo-1700601437860-e66da79cf6d2?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw1OXx8fGVufDB8fHx8fA%3D%3D"
+            data-image="https://plus.unsplash.com/premium_photo-1679079455739-937dc38e743d?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fHZpZGVvJTIwZWRpdGluZ3xlbnwwfHwwfHx8MA%3D%3D"
           >
             <div class="overlay"></div>
             <h2>Video Editing</h2>
           </div>
           <div
             class="elem"
-            data-image="https://images.unsplash.com/photo-1627244714766-94dab62ed964?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fHZpZGVvJTIwZWRpdGluZyUyMHBob25lfGVufDB8fDB8fHww"
+            data-image="https://images.unsplash.com/file-1707885205802-88dd96a21c72image?dpr=2&w=416&auto=format&fit=crop&q=60"
           >
              <div class="overlay"></div>
             <h2>Web Designing</h2>
