--- a/website/public/style.css
+++ b/website/public/style.css
@@ -553,7 +553,7 @@ nav h3 {
     width: 25px;
     border-radius: 50%;
     display: inline-block;
-    background-color: #8a16ff;
+    background-color: #1d006d;
     margin: 2vw 2vw;
   }
 
