--- a/website/views/index.ejs
+++ b/website/views/index.ejs
@@ -115,7 +115,7 @@
           </h1>
           <div id="bottom-part2">
             <img
-              src="https://uploads-ssl.webflow.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d1_Holding_thumb-p-500.jpg"
+              src="https://plus.unsplash.com/premium_photo-1661778490723-371305b4fb06?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8ODV8fG1hcmtldGluZyUyMGFnZW5jeXxlbnwwfHwwfHx8MA%3D%3D"
               alt=""
             />
             <p>
